# emerge-music-plan

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.f0f0bda  CoreLrcLine.qml  CoreMusicLine.qml  LrcLine.qml.autosave  Main.qml  MyAutoText.qml  MyBar.qml  MyBarButton.qml  MyCheckButton.qml  MyFrameless.qml  MyMenu.qml  MyMenuItem.qml  MyRightVessel.qml  MyUiButton.qml  PageMain.qml  PageSeit.qml  PlayerLrcTable.qml  PlayerSpectrum.qml  PlayerTable.qml  PopupInput.qml  PopupMessage.qml  README.md  ToolDeskLrc.qml  ToolEditMusic.qml  ViewBottomBar.qml  ViewLeftBar.qml  ViewPlayingTable.qml  ViewRightConter.qml  base.cpp  base.h  extralibrary.cpp  extralibrary.h  ffmpeg.cpp  ffmpeg.h  filemanagement.h  hosttime.cpp  hosttime.h  imageprovider.cpp  (+26 more)
Framework/: 4-21.docx  CMakeLists.txt  base.cpp  base.h  ffmpeg.cpp  imageprovider.cpp  mediaplayer.cpp  mediaplayer.h  musiccore.cpp  musiccore.h  online.cpp  online.h
Framework/base/: album.cpp  album.h  artist.h  music.cpp  music.h  table.cpp  table.h
Framework/load/: taskcenter.h
Framework/sqlite/: append.cpp  core.cpp  get.cpp  get.h  sqlite.cpp  sqlite.h  update.cpp  update.h
PlayView/: CMakeLists.txt  CoreData.qml  Main.qml
PlayView/LrcLine/: DrawLrcLine.qml
PlayView/centerPage/: PageAlbum.qml  PageArtist.qml  PageMusicPlay.qml  PageSeit.qml
PlayView/core/: CoreAlbumButton.qml  CoreArtistButton.qml  CoreMusicButton.qml  CoreMusicLine.qml
PlayView/inputPopup/: InputAlbumName.qml  InputTableName.qml
PlayView/menu/: MenuAlbum.qml  MenuArtist.qml  MenuMusic.qml  MenuMusicPlayList.qml  MenuPlayList.qml  MenuPlayListSort.qml  MenuTableSort.qml
PlayView/playMusicShow/: PlayStyle1.qml  PlayStyle2.qml
PlayView/player/: PlayerAlbum.qml  PlayerArtist.qml  PlayerLrcTable.qml  PlayerTable.qml  ShowPageAlbum.qml  ShowPageArtist.qml  ShowPageLrcList.qml  ShowPagePlayList.qml
PlayView/recommend/: RecomArtist.qml  RecomMusic.qml  RecomMusicNew.qml
PlayView/toolEditMusicPage/: EditPageMusic.qml  ToolEditMusic.qml
PlayView/view/: ViewBottomBar.qml  ViewLeftBar.qml  ViewMain.qml  ViewPlayingList.qml  ViewPlayingTable.qml
qt/: CMakeLists.txt  base.cpp  base.h  ffmpeg.cpp  ffmpeg.h  filemanagement.cpp  filemanagement.h  imageprovider.cpp  imageprovider.h  main.cpp  mediaplayer.cpp  mediaplayer.h  musiccore.cpp  musiccore.h  namekey.cpp  namekey.h  online.cpp  online.h  setting.cpp  setting.h  tlog.cpp  tlog.h
qt/PlayView/: AutoCoverImage.qml  CMakeLists.txt  CoreData.qml  LoadBase.qml  Main.qml  MusicListView.qml  TextMode.qml  ToolDeskLrc.qml  ui.qrc
qt/PlayView/buttonCell/: CoreButtonAlbum.qml  CoreButtonArtist.qml  CoreButtonMusic.qml
qt/Tiko/: CMakeLists.txt  TikoFrameless.qml  TikoImage.qml  TikoImageAuto.qml  TikoImageColorAuto.qml  TikoSeit.qml  TikoTheme.qml  TikoWidget.qml
qt/base/: album.cpp  album.h  artist.cpp  artist.h  lrcdata.cpp  lrcdata.h  mediadata.h  music.h  playlist.cpp  referencecount.h  table.h
qt/baseclass/: album.cpp  album.h  artist.cpp  artist.h  dataexception.h  lrcdata.cpp  lrcdata.h  mediadata.h  music.cpp  music.h  playlist.cpp  playlist.h
qt/basetool/: basetool.cpp  basetool.h  filemanagement.cpp  filemanagement.h  qmlactive.cpp  qmlactive.h  typeconversion.cpp  typeconversion.h
qt/datacore/: dataactive.cpp  dataactive.h  datamanager.cpp  datamanager.h
qt/imageload/: imagecontrol.cpp  imagecontrol.h  imageprovider.cpp  imageprovider.h
qt/load/: buildmusiccore.cpp  buildmusiccore.h  selectmusicurl.cpp  selectmusicurl.h  taskcenter.cpp  taskcenter.h
qt/mediaplay/: lrcdatacontrol.cpp  lrcdatacontrol.h  mediaplaydata.cpp  mediaplaydata.h  mediaplayer.cpp  mediaplayer.h
qt/sqlite/: append.cpp  append.h  core.cpp  core.h  get.cpp  get.h  sqlite.cpp  sqlite.h  update.cpp  update.h
tiko/: CMakeLists.txt  TikoFrameless.qml  TikoImageAuto.qml  TikoSeit.qml  icon.qrc
tiko/button/: TikoButtonIcon.qml  TikoButtonNormal.qml  TikoButtonSwitch.qml
tiko/combox/: TikoRightVessel.qml  TikoSelectColor.qml  TikoSelectFont.qml
tiko/control/: TikoBar.qml  TikoBorderButton.qml  TikoButton.qml  TikoHSlider.qml  TikoInputText.qml  TikoLittleMessage.qml  TikoMenuItem.qml  TikoPopup.qml  TikoPopupInput.qml  TikoPopupMessage.qml  TikoUiButton.qml  TikoVSlider.qml
tiko/menu/: TikoMenuItem.qml
tiko/message/: TikoMessageLittle.qml
tiko/popup/: TikoPopup.qml  TikoPopupInput.qml  TikoPopupMessage.qml
tiko/select/: TikoSelectColor.qml  TikoSelectFont.qml
tiko/slider/: TikoSliderV.qml
tiko/text/: TikoTextInput.qml
ups/: CMakeLists.txt  CoreAlbumButton.qml  CoreData.qml  CoreMusicLine.qml  Main.qml  ToolDeskLrc.qml  ui.qrc
ups/LrcLine/: DrawLrcFixHeight.qml
ups/centerPage/: PageAlbum.qml  PageAlumb.qml  PageArtist.qml  PageMain.qml  PageMusicPlay.qml  PageRecommend.qml
ups/core/: CoreAlbumButton.qml  CoreArtistButton.qml  CoreMusicButton.qml  CoreMusicLine.qml
ups/menu/: MenuAlbum.qml  MenuAlumb.qml  MenuArtist.qml  MenuMusic.qml  MenuMusicTable.qml
ups/playMusicShow/: PageMusicPlay.qml  PlayStyle1.qml  PlayStyle2.qml
ups/player/: PlayerAlbum.qml  PlayerAlumb.qml  PlayerArtist.qml  PlayerLrcTable.qml  PlayerTable.qml
ups/recommend/: RecomAlbum.qml  RecomArtist.qml  RecomMusic.qml  RecomMusicNew.qml  RecomMusicPlay.qml
ups/toolEditMusicPage/: ToolEditMusic.qml
ups/view/: ViewBottomBar.qml  ViewLeftBar.qml  ViewMain.qml  ViewPlayingTable.qml
widget/: CMakeLists.txt  CoreData.qml  CoreLrcLine.qml  CoreMusicLine.qml  Main.qml  PlayerLrcTable.qml  PlayerSpectrum.qml  PlayerTable.qml  ToolDeskLrc.qml  ui.qrc
widget/LrcLine/: CoreLrcLine.qml  DrawLoadLine.qml
widget/centerPage/: PageSeit.qml
widget/core/: CoreMusicButton.qml
widget/menu/: MenuAlumb.qml  MenuArtist.qml  MenuMusic.qml  MenuTableSort.qml
widget/playMusicShow/: PageMusicPlay.qml  PlayStyle1.qml  PlayStyle2.qml
widget/player/: PlayerLrcTable.qml  PlayerTable.qml
widget/toolEditMusicPage/: EditPageLrc.qml  EditPageMusic.qml  ToolEditMusic.qml
widget/view/: PageMain.qml  PageSeit.qml  ToolDeskLrc.qml  ToolEditMusic.qml  ViewBottomBar.qml  ViewLeftBar.qml  ViewMain.qml  ViewPlayingTable.qml
(+241 files in other folders)
